@startuml

class Client
class Director{
    +builder
    +construct()
}
interface Builder{
    {abstract}buildPart1()
    {abstract}buildPart2()
    {abstract}buildPart3()
}
class ConcreteBuilder{
    +buildPart1()
    +buildPart2()
    +buildPart3()
    +getResult()
}
Client -r-> Director: Uses
Director o-r-> Builder
ConcreteBuilder -u-|> Builder
Client --> ConcreteBuilder:Uses
@enduml